--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-chartjs-2": "2.11.1",
+    "react-dnd": "5.0.0",
+    "react-dnd-html5-backend": "3.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
+    "react-tag-input": "6.5.2",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -68,6 +71,7 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.6",
     "@types/react-table": "^7.7.2",
+    "@types/react-tag-input": "^6.1.3",
     "@types/styled-components": "^5.1.11"
   }
 }
