--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.24.0",
     "chart.js": "2.9.4",
     "markdown-it": "^12.2.0",
     "polished": "^4.1.3",
