--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
     "chart.js": "2.9.4",
+    "date-fns": "^2.25.0",
     "markdown-it": "^12.2.0",
     "polished": "^4.1.3",
     "react": "^17.0.2",
